add ejs support

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -28,6 +28,10 @@
       {
         "language": "html",
         "path": "./custom_html.json"
+      },
+      {
+        "language": "html",
+        "path": "./ejs-snippet.json"
       }
     ]
   }
